[package]
name = "microservice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.8.4"

[[bin]]
name = "echo-server"
path = "src/server.rs"
